--- a/nlu_config.yml
+++ b/nlu_config.yml
@@ -1,4 +1,17 @@
 language: "en"
 
-pipeline: spacy_sklearn
+pipeline:
+- name: "nlp_spacy"
+- name: "tokenizer_spacy"
+- name: "intent_entity_featurizer_regex"
+- name: "intent_featurizer_spacy"
+- name: "ner_crf"
+- name: "ner_duckling"
+  dimensions: ["time"]
+# - name: "ner_synonyms"
+# - name: "intent_classifier_sklearn"
+- name: "intent_featurizer_count_vectors"
+- name: "intent_featurizer_ngrams"
+  max_number_of_ngrams: 5
+- name: "intent_classifier_tensorflow_embedding"
 
