--- a/models/current/dialogue/domain.yml
+++ b/models/current/dialogue/domain.yml
@@ -10,10 +10,11 @@ actions:
 - utter_chitchat
 - action_joke
 - action_get_model_year
-- action_ask_model_year
+- utter_ask_model_year
 - action_verify_dob
 - action_verify_expire_date
 - action_pricing
+- utter_fallback
 config:
   store_entities_as_slots: true
 entities:
